Fix spacing in miniResults header and only add padding in app if not hiding navbar

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -17,7 +17,7 @@ body, html{
 }
 
 body{
-	padding-top: 97px;
+	// padding-top: 97px;
 }
 
 h1, h2, h3{
